<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".ui.sellerHome.sellerHome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/main_activity_show_all_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="5dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:drawablePadding="12dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/home_page"

                android:textSize="32sp"

                />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_activity_food_categories_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="true"
            android:clipToPadding="false"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <!--Quick Item Selection-->
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:id="@+id/food_categories_container_ll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_horizontal"

                            android:orientation="vertical"
                            tools:ignore="TouchTargetSizeCheck">


                            <TextView
                                android:id="@+id/txtAll"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:background="#FFFFFF"
                                android:fontFamily="@font/montserrat_semi_bold"
                                android:text="@string/all"
                                android:textSize="12sp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_horizontal"

                            android:orientation="vertical"
                            tools:ignore="TouchTargetSizeCheck">


                            <TextView
                                android:id="@+id/txtNew"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/montserrat_semi_bold"
                                android:text="New"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_horizontal"

                            android:orientation="vertical"
                            tools:ignore="TouchTargetSizeCheck">


                            <TextView
                                android:id="@+id/txtPreparing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/montserrat_semi_bold"
                                android:text="@string/preparing"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_horizontal"

                            android:orientation="vertical"
                            tools:ignore="TouchTargetSizeCheck">


                            <TextView
                                android:id="@+id/txtPrepared"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/montserrat_semi_bold"
                                android:text="@string/prepared"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_horizontal"

                            android:orientation="vertical"
                            tools:ignore="TouchTargetSizeCheck">


                            <TextView
                                android:id="@+id/txtCompleted"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/montserrat_semi_bold"
                                android:text="@string/completed"
                                android:textSize="12sp" />


                        </LinearLayout>


                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleFood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingBottom="100dp"
                    app:stackFromEnd="false"
                    tools:listitem="@layout/home_food" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>





</androidx.drawerlayout.widget.DrawerLayout>